# python-template

./: .bandit.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  init.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
.github/workflows/: ci.yml
cmdq/: base.py
cmdq/processors/: threadpool.py
qcmd/processors/: executor.py
test/: base_test.py  core_test.py  threadpool_context_test.py  threadpool_nocontext_test.py
