[metadata]
name = qcmd
version = 0.0.5
license = MIT License

[options]
packages = qcmd, qcmd.processors

[mypy]
files=qcmd, test
namespace_packages=true
ignore_missing_imports=true
follow_imports=skip

[flake8]
ignore = E203, E266, E501, E741, W503
max-line-length = 99
max-complexity = 18
select = B,C,E,F,W,T4
