[metadata]
name = pkg
version = 0.0.1-alpha0
license = MIT License
url = https://github.com/libanvl/python-{pkg}
maintainer = libanvl
maintainer_email = hammer@libanvl.dev
description = TODO
long_description = file: README.md, LICENSE
license = MIT License
keywords = libanvl, TODO
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed

[options]
packages = pkg

[flake8]
ignore = E203, E266, E501, E741, W503
max-line-length = 99
max-complexity = 18
select = B,C,E,F,W,T4
